--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>         <!-- リスト　箇条書き-->
           <li>
           <a href="https://dotinstall.com" target="_blank">       <!--新しいタグで開く-->
-              <img src="blog.png" width="20" height="20" alt="ブログサイトへのリンク画像"> 
+              <img src=https://raw.githubusercontent.com/babattobaba/1/main/blog.png" width="20" height="20" alt="ブログサイトへのリンク画像"> 
           </a>
           </li>
           <li>
