--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>ポートフォリオ</title>
+    <title>HPを作りたい2021</title>
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="ポートフォリオサイトです">
     <link rel="stylesheet" href="styles.css">
