--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HPを作りたい2021</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/babattobaba/1/main/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <meta name="description" content="ポートフォリオサイトです">
     <link rel="stylesheet" href="styles.css">
   </head>
